force-app/main/default/objects/FAQ__c/FAQ__c.object-meta.xml
<CustomObject>
    <description>Stores General Frequently Asked Questions for patient reference.</description>
    <label>FAQ</label>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>